--- a/Lab4/Makefile
+++ b/Lab4/Makefile
@@ -1,3 +1,5 @@
-all:
-        gcc Lab4Out.c -o output
-        gcc Lab4In.c -o input
+all: In Out
+In:
+	gcc Lab4In.c -o Input -Wall
+Out:
+	gcc Lab4Out.c -o Output -Wall
